--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,50 +1,140 @@
 {{<layout}}
 
 {{$pageTitle}}
-	GOV.UK prototyping kit
+	DWP Digital Portfolio - Home page
 {{/pageTitle}}
 
 {{$content}}
 
 <main id="content" role="main">
 
-	<h1 class="heading-xlarge">Welcome to the GOV.UK prototyping kit</h1>
-	<!-- feel free to change this page to suit your needs -->
+	<p style="margin-top:30px;">These are all the things we're doing:</p>
 
-	<p>This is the index.html page - we recommend you put links to key pages here.</p>
+	<div class="grid-row">
+		<section class="column-quarter">
+			<div class="phase phase-discovery">Discovery</div>
+			<div class="big_number txt-discovery">4</div>
+		</section>
+		<section class="column-quarter">
+			<div class="phase phase-alpha">Alpha</div>
+			<div class="big_number txt-alpha">3</div>
+		</section>
+		<section class="column-quarter">
+			<div class="phase phase-beta">Beta</div>
+			<div class="big_number txt-beta">10</div>
+		</section>
+		<section class="column-quarter">
+			<div class="phase phase-live">Live</div>
+			<div class="big_number txt-live">1</div>
+		</section>
+	</div>
 
-	<h2 class="heading-large">Pages</h2>
+	<h2 class="heading-large">Retirement &amp; Pensions</h2>
+	<p>We're helping users to:</p>
+	<div class="grid-row">
+		<section class="column-quarter"> &nbsp; </section>
+		<section class="column-quarter">
+			<ul class="link-list link-list-alpha">
+				<li><a href="">Get your State Pension</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter">
+			<ul class="link-list link-list-beta">
+				<li><a href="">Check your State Pension</a></li>
+				<li><a href="">Find a lost Pension</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter"> &nbsp; </section>
+	</div>
 
-	<ul>
-		<li>
-			<a href="/examples">Example pages</a>
-		</li>
-	</ul>
+	<h2 class="heading-large">Health &amp; Disability</h2>
+	<p>We're helping users to:</p>
+	<div class="grid-row">
+		<section class="column-quarter">
+			<ul class="link-list link-list-discovery">
+				<li><a href="">Apply for Employment Support Allowance</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter">
+			<ul class="link-list link-list-alpha">
+				<li><a href="">Make a complaint</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter">
+			<ul class="link-list link-list-beta">
+				<li><a href="">Apply for an Access To Work Grant</a></li>
+				<li><a href="">Apply for a Personal Independance Payment</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter">
+			<ul class="link-list link-list-live">
+				<li><a href="">Apply for Carer&rsquo;s Allowance</a></li>
+			</ul>
+		</section>
+	</div>
 
-	<h2 class="heading-large">Resources</h2>
+	<h2 class="heading-large">Fraud &amp; Debt</h2>
+	<p>We're helping users to:</p>
+	<div class="grid-row">
+		<section class="column-quarter">
+			<ul class="link-list link-list-discovery">
+				<li><a href="">Report Benefit Fraud</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter"> &nbsp; </section>
+		<section class="column-quarter">
+			<ul class="link-list link-list-beta">
+				<li><a href="">Repay a benefit debt</a></li>
+				<li><a href="">Real time earnings</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter"> &nbsp; </section>
+	</div>
 
-	<ul class="list-bullet">
-		<li>
-			<a href="https://github.com/alphagov/govuk_prototype_kit/tree/master/docs">
-				GOV.UK kit documentation
-			</a>
-		</li>
-		<li>
-			<a href="http://govuk-elements.herokuapp.com/snippets/">
-				Guide to GOV.UK elements HTML
-			</a>
-		</li>
-		<li>
-			<a href="https://www.gov.uk/service-manual">
-				Service design manual
-			</a>
-		</li>
-		<li>
-			<a href="https://www.gov.uk/design-principles">
-				Government Digital Service Design Principles
-			</a>
-		</li>
-	</ul>
+	<h2 class="heading-large">Unemployment</h2>
+	<p>We're helping users to:</p>
+	<div class="grid-row">
+		<section class="column-quarter">
+			<ul class="link-list link-list-discovery">
+				<li><a href="">Digital service centres</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter">
+			<ul class="link-list link-list-alpha">
+				<li><a href="">Universal Job Match replacement</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter">
+			<ul class="link-list link-list-beta">
+				<li><a href="">Universal Credit</a></li>
+				<li><a href="">Jobseeker Services</a></li>
+				<li><a href="">Apply for a budgeting loan</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter"> &nbsp; </section>
+	</div>
+
+	<h2 class="heading-large">Digital Delivery</h2>
+	<p>We're helping users to:</p>
+	<div class="grid-row">
+		<section class="column-quarter">
+			<ul class="link-list link-list-discovery">
+				<li><a href="">Send payment details as evidence (Enhanced Data)</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter">
+			<ul class="link-list link-list-alpha">
+				<li><a href="">ID / Verification</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter">
+			<ul class="link-list link-list-beta">
+				<li><a href="">Send information securely</a></li>
+				<li><a href="">Jobseeker Services</a></li>
+			</ul>
+		</section>
+		<section class="column-quarter"> &nbsp; </section>
+	</div>
 
 </main>
 
