--- a/app/views/includes/propositional_navigation_alpha.html
+++ b/app/views/includes/propositional_navigation_alpha.html
@@ -2,11 +2,11 @@
   <div class="content">
     <a href="#proposition-links" class="js-header-toggle menu">Menu</a>
     <nav id="proposition-menu">
-      <a href="/" id="proposition-name">Service Name <span class="alpha-tag">Alpha</span></a>
-      <ul id="proposition-links">
+      <a href="/" id="proposition-name">DWP Digital Portfolio <span class="alpha-tag">Alpha</span></a>
+      <!-- <ul id="proposition-links">
         <li><a href="url-to-page-1" class="active">Navigation item #1</a></li>
         <li><a href="url-to-page-2">Navigation item #2</a></li>
-      </ul>
+      </ul> -->
     </nav>
   </div>
 </div>
