--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -50,10 +50,11 @@
   Lists of links
 */
 .link-list {
-  border-left:10px solid black;
+  border-left:3px solid black;
   padding:10px;
   font-size:16px;
-  background-color:$panel-colour;
+  background-color:$highlight-colour;
+  margin-bottom:5px;
   li {margin-bottom:1em;}
 }
 
@@ -80,7 +81,7 @@
 
 .phase-history-item {
   padding-left:10px;
-  border-left:5px solid black;
+  border-left:3px solid black;
   margin-bottom:0;
   padding-bottom:10px;
 }
