--- a/app/views/project.html
+++ b/app/views/project.html
@@ -52,6 +52,9 @@
 
 			<h3 class="heading-small">Prototype Link</h3>
 			<p><a href="http://asdlsak.herokuapp.com/">http://asdlsak.herokuapp.com/</a></p>
+
+			<h3 class="heading-small">Github</h3>
+			<p>The <a href="https://github.com/dwpdigitaltech/dwp-portfolio/blob/master/lib/projects/{{data.filename}}">content for this page</a> is kept on github</p>			
 		</section>
 	</div>
 	
