More tidying after Ben's feedback.

--- a/app/assets/sass/application.scss
+++ b/app/assets/sass/application.scss
@@ -126,3 +126,9 @@
   display:inline-block;
   margin:0;
 }
+@media (min-width: 769px)
+{
+  #global-header .header-wrapper .header-global .header-logo {
+    width:100%;
+  }  
+}
