--- a/app/views/index.html
+++ b/app/views/index.html
@@ -35,7 +35,7 @@
 
 	{% for name, item in data %}
 		<h2 class="heading-large service-area">{{ name }}</h2>
-			<p>We're helping users to:</p>
+			<!-- <p>We're helping users to:</p> -->
 			<div class="grid-row">				
 				<section class="column-quarter">
 					{% if item.discovery %}
