--- a/app/views/layout.html
+++ b/app/views/layout.html
@@ -2,8 +2,6 @@
 
 {% block head %} {% include "includes/head.html" %} {% endblock %}
 
-{% block header_class %}with-proposition{% endblock %}
-
-{% block proposition_header %} {% include "includes/propositional_navigation_alpha.html" %} {% endblock %}
+{% set global_header_text = "DWP Digital Services" %}
 
 {% block bodyEnd %} bodyEnd {% endblock %}
