--- a/app/views/project.html
+++ b/app/views/project.html
@@ -17,6 +17,7 @@
 			
 			<div class="location">Based in <strong>{{ data.location }}</strong></div>
 
+			<h2 class="heading-medium">Project history</h2>
 			<div class="phase-history">
 				<div class="phase-history-item border-discovery txt-discovery">
 					<h3><a href="#" class="tag tag-history discovery">discovery</a></h3>
