--- a/app/views/index.html
+++ b/app/views/index.html
@@ -15,59 +15,88 @@
 	{% endif %}
 
 	<div class="grid-row">
-		<section class="column-quarter">
+		<section class="column-fifth">
+			<div class="tag backlog">Backlog</div>
+			<div class="big_number txt-backlog">{{ counts.backlog }}</div>
+		</section>
+		<section class="column-fifth">
 			<div class="tag discovery">Discovery</div>
 			<div class="big_number txt-discovery">{{ counts.discovery }}</div>
 		</section>
-		<section class="column-quarter">
+		<section class="column-fifth">
 			<div class="tag alpha">Alpha</div>
 			<div class="big_number txt-alpha">{{ counts.alpha }}</div>
 		</section>
-		<section class="column-quarter">
+		<section class="column-fifth">
 			<div class="tag beta">Beta</div>
 			<div class="big_number txt-beta">{{ counts.beta }}</div>
 		</section>
-		<section class="column-quarter">
+		<section class="column-fifth">
 			<div class="tag live">Live</div>
 			<div class="big_number txt-live">{{ counts.live }}</div>
 		</section>
 	</div>
 
-	{% for name, item in data %}
+	{% 
+		set order = [
+			'Health & Disability',
+			'Working Age',
+			'Retirement Provision',
+			'Fraud & Debt',
+			'Platforms'
+		]
+	%}
+
+	{% for name in order %}
+		{% set item = data[name] %}
 		<h2 class="heading-large service-area">{{ name }}</h2>
 			<!-- <p>We're helping users to:</p> -->
 			<div class="grid-row">				
-				<section class="column-quarter">
+				<section class="column-fifth">
+					{% if item.backlog %}
+					<ul class="link-list border-backlog">
+						{% for bit in item.backlog %}
+							{% if bit.internal %} fish {% endif %}
+							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>							
+						{% endfor %}						
+					</ul>
+					{% else %}&nbsp;{% endif %}
+				</section>
+				<section class="column-fifth">
 					{% if item.discovery %}
 					<ul class="link-list border-discovery">
 						{% for bit in item.discovery %}
-							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>
+							{% if bit.internal %} fish {% endif %}
+							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>							
 						{% endfor %}						
 					</ul>
 					{% else %}&nbsp;{% endif %}
 				</section>
-				<section class="column-quarter">
+				<section class="column-fifth">
 					{% if item.alpha %}
 					<ul class="link-list border-alpha">
 						{% for bit in item.alpha %}
+							{% if bit.internal %} fish {% endif %}
 							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>
 						{% endfor %}						
 					</ul>
 					{% else %}&nbsp;{% endif %}
 				</section>
-				<section class="column-quarter">
+				<section class="column-fifth">
 					{% if item.beta %}
 					<ul class="link-list border-beta">
 						{% for bit in item.beta %}
+							{% if bit.internal %} fish {% endif %}
 							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>
 						{% endfor %}						
 					</ul>
 					{% else %}&nbsp;{% endif %}
 				</section>
-				<section class="column-quarter">
+				<section class="column-fifth">
 					{% if item.live %}
 					<ul class="link-list border-live">
 						{% for bit in item.live %}
+							{% if bit.internal %} fish {% endif %}
 							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>
 						{% endfor %}						
 					</ul>
