--- a/app/views/index.html
+++ b/app/views/index.html
@@ -56,8 +56,7 @@
 					{% if item.backlog %}
 					<ul class="link-list border-backlog">
 						{% for bit in item.backlog %}
-							{% if bit.internal %} {% endif %}
-							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>							
+							<li {% if bit.internal %}class="internal"{% endif %}><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>							
 						{% endfor %}						
 					</ul>
 					{% else %}&nbsp;{% endif %}
@@ -66,8 +65,7 @@
 					{% if item.discovery %}
 					<ul class="link-list border-discovery">
 						{% for bit in item.discovery %}
-							{% if bit.internal %} {% endif %}
-							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>							
+							<li {% if bit.internal %}class="internal"{% endif %}><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>							
 						{% endfor %}						
 					</ul>
 					{% else %}&nbsp;{% endif %}
@@ -76,8 +74,7 @@
 					{% if item.alpha %}
 					<ul class="link-list border-alpha">
 						{% for bit in item.alpha %}
-							{% if bit.internal %} {% endif %}
-							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>
+							<li {% if bit.internal %}class="internal"{% endif %}><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>
 						{% endfor %}						
 					</ul>
 					{% else %}&nbsp;{% endif %}
@@ -86,8 +83,7 @@
 					{% if item.beta %}
 					<ul class="link-list border-beta">
 						{% for bit in item.beta %}
-							{% if bit.internal %} {% endif %}
-							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>
+							<li {% if bit.internal %}class="internal"{% endif %}><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>
 						{% endfor %}						
 					</ul>
 					{% else %}&nbsp;{% endif %}
@@ -95,9 +91,8 @@
 				<section class="column-fifth">
 					{% if item.live %}
 					<ul class="link-list border-live">
-						{% for bit in item.live %}
-							{% if bit.internal %} {% endif %}
-							<li><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>
+						{% for bit in item.live %}							
+							<li {% if bit.internal %}class="internal"{% endif %}><a href="/projects/{{ bit.id }}/{{ bit.name | slugify }}">{{ bit.name }}</a></li>
 						{% endfor %}						
 					</ul>
 					{% else %}&nbsp;{% endif %}
