Added draft 'about' page
Content needs reworking more…

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,7 @@
 {% extends "layout.html" %}
 
 {% block pageTitle %}
-	GOV.UK prototyping kit
+	DWP Digital Portfolio
 {% endblock %}
 
 {% block content %}
